Fix truncation of sources a bit

--- a/ui/css/query-editor.css
+++ b/ui/css/query-editor.css
@@ -171,8 +171,9 @@ div:hover > .hover-reveal { opacity: 1; }
 .query-editor .view-constraint .grip { flex-direction: row; }
 
 
-.query-editor .workspace .token { flex: 1 0 auto; flex-direction: row; align-items: baseline; position: relative; }
-.query-editor .workspace .token.field .source { flex-shrink: 0; margin-left: 0.25em; font-size: 0.75em; color: #aaa; text-overflow: ellipis; white-space: nowrap; }
+.query-editor .workspace .token { flex: 0 1 auto; flex-direction: row; align-items: baseline; position: relative; white-space: nowrap;}
+.query-editor .workspace .token.field .name {flex-shrink: 0; }
+.query-editor .workspace .token.field .source { flex-shrink: 1; margin-left: 0.25em; font-size: 0.75em; color: #aaa; text-overflow: ellipis; white-space: nowrap; overflow: hidden; }
 .query-editor .workspace .token-selector, .workspace .selector { position: absolute; padding: 0.2em; z-index: 10; background: #101010; outline: none; }
 .query-editor .workspace .selector-item:hover { background: rgba(255, 255, 255, 0.2); }
 
